[gd_scene load_steps=2 format=3 uid="uid://nl5ym6wydbj"]

[ext_resource type="Script" uid="uid://pxt4danhoc8u" path="res://scenes/settings_menu.gd" id="1_05p07"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_05p07")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 63.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicVolumeTextLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Music"

[node name="MusicVolumeHSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="MusicVolumeNumLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
text = "100.0"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SfxVolumeTextLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Sound FXs"

[node name="SfxVolumeHSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="SfxVolumeNumLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
text = "100.0"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Close"

[connection signal="drag_ended" from="VBoxContainer/HBoxContainer/MusicVolumeHSlider" to="." method="_on_volume_h_slider_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/MusicVolumeHSlider" to="." method="_on_volume_h_slider_value_changed"]
[connection signal="drag_ended" from="VBoxContainer/HBoxContainer2/SfxVolumeHSlider" to="." method="_on_sfx_volume_h_slider_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/SfxVolumeHSlider" to="." method="_on_sfx_volume_h_slider_value_changed"]
[connection signal="button_up" from="VBoxContainer/Button" to="." method="_on_button_button_up"]
